# apply-patch-py

./: Makefile  README.md  pyproject.toml
examples/pydantic_example/: pydantic_example.py
src/apply_patch_py/: __init__.py  applier.py  cli.py  constants.py  models.py  parser.py  search.py  utils.py
tests/: conftest.py  test_cli.py  test_edge_cases.py  test_fuzzy.py  test_fuzzy_scoring.py  test_parsing_fixes.py  test_scenarios.py  test_tool.py
tests/integration/: providers.py  test_llm_providers.py
tests/integration/fixture/: dirty_script.py
