[project]
name = "apply-patch-py"
version = "0.1.0"
description = "A python port of codex apply patch"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
apply-patch-py = "apply_patch_py:main"

[dependency-groups]
dev = [
    "pytest",
]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apply_patch_py"]
